<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mavsim_bridge</name>
  <version>1.0.0</version>
  <description>Bridge for running mavsim with ROSflight</description>
  <maintainer email="bsuther2@byu.edu">Brandon Sutherland</maintainer>
  <license>BSD-3-Clause</license>

  <depend>geometry_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-pyproj</depend>
  <depend>rosflight_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
